lil more orange

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <style>
   body {
-    background: -webkit-linear-gradient(#E7C51C, #FFDE96);
+    background: -webkit-linear-gradient(#E7A71C, #FFDE96);
   }
 </style>
