--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <style>
   body {
-    background: -webkit-linear-gradient(#E7A71C, #FFDE96);
+    background-color: -webkit-linear-gradient(#E7A71C, #FFDE96);
+    background-position: center;
+    background-size: cover
+    background-repeat: no-repeat;
   }
 </style>
 
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<script type="text/javascript">google.load('feeds', '1');</script>
-
 <script type="text/javascript">
+  google.load('feeds', '1')
+
   var feed = new google.feeds.Feed('http://all-horizons.tumblr.com/rss')
   feed.load(function (data) {
-      console.dir(data.feed.entries)
+    $.each(data.feed.entries, function(i, val) {
+      $.doTimeout('change_image', 2000, function() {
+        image_url = /http.+.gif/.exec(val)[0]
+        $('body').css('background-image', image_url)
+      })
+    })
   })
 </script>
