--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<script type="text/javascript">
-  google.load('feeds', '1')
+<script type="text/javascript">google.load('feeds', '1')</script>
 
+<script type="text/javascript">
   var feed = new google.feeds.Feed('http://all-horizons.tumblr.com/rss')
   feed.load(function (data) {
     $.each(data.feed.entries, function(i, val) {
