--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   var feed = new google.feeds.Feed('http://all-horizons.tumblr.com/rss')
   feed.load(function (data) {
     $.each(data.feed.entries, function(i, val) {
-      $.doTimeout('change_image', 2000, function() {
+      window.setTimeout(function() {
         image_url = /http.+.gif/.exec(val)[0]
         $('body').css('background-image', image_url)
-      })
+      }, 2000)
     })
   })
 </script>
