--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   body {
     background-color: -webkit-linear-gradient(#E7A71C, #FFDE96);
     background-position: center;
-    background-size: cover
+    background-size: cover;
     background-repeat: no-repeat;
   }
 </style>
