--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <style>
   body {
-    background-color: -webkit-linear-gradient(#E7A71C, #FFDE96);
+    background-image: -webkit-linear-gradient(#E7A71C, #FFDE96);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
