--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
 
 <script type="text/javascript">
   var feed = new google.feeds.Feed('http://all-horizons.tumblr.com/rss')
-  feed.load(function (data) {
+  feed.load(function(data) {
+    var image_urls = []
+    
     $.each(data.feed.entries, function(i, val) {
+      var image_urls.push(/http.+.gif/.exec(val.content)[0])
+    }
+
+    var i = 0
+    while (i < image_urls.length) {
       window.setTimeout(function() {
-        var image_url = /http.+.gif/.exec(val.content)[0]
-        $('body').css('background-image', image_url)
+        $('body').css('background-image', image_urls[0])
+        i++
       }, 2000)
-    })
+    }
   })
 </script>
