--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 
     var i = 0
     loop_images = window.setInterval(function() {
+      debugger
       if (i >= image_urls.length) window.clearInterval(loop_images)
-      $('body').css('background-image', image_urls[0])
+      $('body').css('background-image', image_urls[i])
       i++
     }, 2000)
   })
