--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     loop_images = window.setInterval(function() {
       debugger
       if (i >= image_urls.length) window.clearInterval(loop_images)
-      $('body').css('background-image', image_urls[i])
+      $('body').css('background-image', "url("+image_urls[i]+")")
       i++
     }, 2000)
   })
